Fixes issue #271 - Add listener support to web.xml parsing